Fix layout for module manager on mobile screens

--- a/config/css/main.css
+++ b/config/css/main.css
@@ -4340,6 +4340,14 @@ main {
       top: -20px;
       height: 110px;
       width: auto; }
+    @media screen and (min-width: 0em) and (max-width: 39.9375em) {
+      .flex-row .modulepicker__imgwrap {
+        max-width: 100%;
+        position: absolute;
+        width: 80px;
+        height: 80px; }
+        .flex-row .modulepicker__imgwrap img {
+          height: 80px; } }
 
 .moduleManager {
   display: -webkit-box;
